# flutter_jpeg_encode_ffi

./: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/jpeg_encode_ffi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: jpeg_encode_ffi.podspec
lib/: jpeg_encode_ffi.dart
lib/src/: jpeg_encode_ffi.dart  jpeg_encode_ffi_bindings_generated.dart
linux/: CMakeLists.txt
macos/: jpeg_encode_ffi.podspec
macos/Classes/: jpeg_encode_ffi.c
src/: CMakeLists.txt  jpeg_encode_ffi.c  jpeg_encode_ffi.h
windows/: CMakeLists.txt
